syntax = "proto3";

package org.project_planton.provider.kubernetes.kuberneteshelmrelease.v1;

import "buf/validate/validate.proto";
import "org/project_planton/provider/kubernetes/target_cluster.proto";
import "org/project_planton/shared/foreignkey/v1/foreign_key.proto";

// **KubernetesHelmReleaseSpec** defines the configuration for deploying a Helm release on a Kubernetes cluster.
// This message specifies the parameters needed to create and manage a Helm chart deployment within a Kubernetes environment.
// By configuring the Helm chart specifications, you can deploy applications packaged as Helm charts with customized values.
message KubernetesHelmReleaseSpec {
  // Target Kubernetes Cluster
  org.project_planton.provider.kubernetes.KubernetesClusterSelector target_cluster = 1;

  // Kubernetes Namespace
  org.project_planton.shared.foreignkey.v1.StringValueOrRef namespace = 2 [
    (buf.validate.field).required = true,
    (org.project_planton.shared.foreignkey.v1.default_kind) = KubernetesNamespace,
    (org.project_planton.shared.foreignkey.v1.default_kind_field_path) = "spec.name"
  ];

  // flag to indicate if the namespace should be created
  bool create_namespace = 3;

  // The repository URL where the Helm chart is hosted.
  // For example, "https://charts.helm.sh/stable".
  // an example for chart-repo (redis chart) can be found in https://artifacthub.io/packages/helm/bitnami/redis?modal=install
  string repo = 4 [(buf.validate.field).required = true];

  // The name of the Helm chart to deploy.
  // For example, "nginx-ingress".
  string name = 5 [(buf.validate.field).required = true];

  // The version of the Helm chart to deploy.
  // For example, "1.41.3".
  string version = 6 [(buf.validate.field).required = true];

  // A map of key-value pairs representing custom values for the Helm chart.
  // These values override the default settings in the chart's values.yaml file.
  map<string, string> values = 7;
}
