syntax = "proto3";

package org.project_planton.provider.kubernetes.kubernetesistio.v1;

import "buf/validate/validate.proto";
import "org/project_planton/shared/kubernetes/kubernetes.proto";
import "org/project_planton/shared/kubernetes/options.proto";
import "org/project_planton/shared/kubernetes/target_cluster.proto";

// **KubernetesIstioSpec** defines the configuration for deploying Istio service mesh on a Kubernetes cluster.
// This message specifies the parameters needed to create and manage an Istio deployment within a Kubernetes environment.
// It includes container specifications for resource allocation to the Istio control plane (istiod).
message KubernetesIstioSpec {
  // The Kubernetes cluster to install this addon on.
  org.project_planton.shared.kubernetes.KubernetesAddonTargetCluster target_cluster = 1;
  // The container specifications for the Istio control plane (istiod) deployment.
  KubernetesIstioSpecContainer container = 2 [(buf.validate.field).required = true];
}

// **KubernetesIstioSpecContainer** specifies the container configuration for the Istio control plane (istiod).
// It includes resource allocations for CPU and memory to ensure the service mesh control plane runs efficiently.
message KubernetesIstioSpecContainer {
  // The CPU and memory resources allocated to the Istio control plane (istiod) container.
  org.project_planton.shared.kubernetes.ContainerResources resources = 1 [(org.project_planton.shared.kubernetes.default_container_resources) = {
    limits: {
      cpu: "1000m"
      memory: "1Gi"
    }
    requests: {
      cpu: "50m"
      memory: "100Mi"
    }
  }];
}
